@@ -132,6 +132,7 @@ S3method(posterior_samples,brmsfit)
 S3method(posterior_samples,default)
 S3method(posterior_summary,brmsfit)
 S3method(posterior_summary,default)
+S3method(pp_average,brmsfit)
 S3method(pp_check,brmsfit)
 S3method(pp_mixture,brmsfit)
 S3method(predict,brmsfit)
@@ -327,6 +328,7 @@ export(posterior_predict)
 export(posterior_samples)
 export(posterior_summary)
 export(posterior_table)
+export(pp_average)
 export(pp_check)
 export(pp_mixture)
 export(predictive_error)
